# chat-systems

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  seed.sh
.claude/skills/backend-conventions/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/.cargo/: audit.toml
backend/api/: Cargo.toml
backend/api/src/: config.rs  health.rs  main.rs  metrics.rs  middleware.rs  rate_limit.rs  state.rs
backend/api/src/admin/: routes.rs
backend/api/src/auth/: mod.rs  models.rs  repo.rs  routes.rs  service.rs
backend/api/src/dm/: mod.rs  models.rs  repo.rs  routes.rs
backend/api/src/files/: mod.rs  models.rs  repo.rs  routes.rs  storage.rs
backend/api/src/hooks/: executor.rs  mod.rs  models.rs  repo.rs  routes.rs  ssrf.rs
backend/api/src/http_tests/: admin.rs  auth.rs  channels.rs  common.rs  dm.rs  files.rs  hooks.rs  huddle.rs  messaging.rs  mod.rs  notifications.rs  smoke.rs  workspace.rs
backend/api/src/huddle/: consumer.rs  models.rs  repo.rs  routes.rs
backend/api/src/messaging/: mod.rs  models.rs  publisher.rs  repo.rs  routes.rs
backend/api/src/notifications/: consumer.rs  mod.rs  models.rs  repo.rs  routes.rs
backend/api/src/workspace/: models.rs  repo.rs  routes.rs  service.rs
backend/migrations/: 20240305000001_initial_schema.sql  20240305000002_workspace_soft_delete.sql  20240305000003_direct_messages.sql  20240305000004_password_reset_tokens.sql  20240305000005_hook_execution_indexes.sql  20240305000006_fk_indexes.sql  20240305000007_dm_reads.sql  20240305000008_dm_reactions.sql  20240305000009_channel_mute.sql  20240305000010_user_dnd.sql  20240305000011_huddle_history.sql  20240305000012_hooks_incoming_token_index.sql
backend/realtime/: Cargo.toml
backend/realtime/src/: config.rs  connection_manager.rs  event_consumer.rs  main.rs  ws_handler.rs
backend/realtime/src/tests/: client_messages.rs  common.rs  connection_manager.rs  events.rs  huddle.rs  mod.rs  server.rs
backend/shared/common/: Cargo.toml
backend/shared/common/src/: cors.rs  errors.rs  lib.rs  validation.rs
backend/shared/events/: Cargo.toml
backend/shared/events/src/: auth_events.rs  huddle_events.rs  lib.rs  messaging_events.rs  workspace_events.rs
docker/: Caddyfile  backup.sh  minio-backup.sh  minio-init.sh
docker/coturn/: turnserver.conf
docs/: CONTRIBUTING.md  README.md  ROADMAP.md  RUNBOOK.md  backend.md  frontend.md  huddle-plan.md  manual-qa.md
frontend/: .dockerignore  .prettierignore  .prettierrc.json  Dockerfile  REACT_QUERY_ARCHITECTURE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/docker/: nginx.conf
frontend/e2e/: messaging.spec.ts
frontend/electron/: main.cjs  preload.cjs
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/components/: AddInstancePanel.tsx  ChannelMembersPanel.tsx  ErrorBoundary.tsx  FormattingToolbar.tsx  MembersPanel.tsx  NotificationsPanel.tsx  PinnedMessagesPanel.tsx  PresenceDot.tsx  RichTextDisplay.tsx  SearchPanel.tsx  SettingsPanel.tsx  ThreadPanel.tsx  TypingIndicator.tsx  UserProfilePanel.tsx
frontend/src/features/channel/: ChannelHeader.tsx  ChannelSidebar.tsx  index.ts
frontend/src/features/huddle/: HuddleController.tsx  index.ts
frontend/src/features/huddle/components/: HuddleBar.tsx  HuddleStartButton.tsx  HuddleSystemMessage.tsx  HuddleWindow.tsx  IncomingCallRing.tsx
frontend/src/features/huddle/hooks/: useActiveHuddlesSync.ts  useMediaDevices.ts  useSpeaking.ts
frontend/src/features/huddle/lib/: MeshManager.ts  backgroundProcessor.ts  media.ts
frontend/src/features/messaging/: AttachmentCard.test.tsx  AttachmentCard.tsx  EmojiPicker.tsx  EmojiSuggestionDropdown.tsx  MentionDropdown.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  emojiSuggestion.ts  index.ts  mentionSuggestion.ts  messageGrouping.test.ts  messageGrouping.ts
frontend/src/features/messaging/hooks/: useMessageActions.ts
frontend/src/features/navigation/: QuickSwitcher.tsx
frontend/src/features/notifications/: NotificationStream.tsx  index.ts
frontend/src/features/workspace/: WorkspaceRightPanels.tsx  WorkspaceSidebar.tsx  index.ts
frontend/src/features/workspace/hooks/: useRightPanel.ts  useWorkspaceController.ts
frontend/src/hooks/queries/: useAuth.ts  useChannels.ts  useDm.ts  useHuddle.ts  useMessages.ts  useNotifications.test.ts  useNotifications.ts  useThreads.ts  useWorkspaces.ts
frontend/src/lib/: api.test.ts  api.ts  attachments.test.ts  attachments.ts  electron.ts  emojiData.ts  emojiShortcodes.ts  errors.ts  globalEventBus.ts  instances.ts  logger.ts  mentionHighlightExtension.ts  mentions.ts  messageCache.test.ts  messageCache.ts  notifications.ts  queryClient.ts  realtimeBackfill.ts  serverEvents.ts  tiptapExtensions.ts  userHelpers.ts  ws.ts  wsQuerySync.ts
frontend/src/models/enums/: index.ts
frontend/src/pages/: AddInstancePage.tsx  CompleteRegistrationPage.tsx  DmView.tsx  InstanceAdminPage.tsx  LoginPage.tsx  ResetPasswordPage.tsx  WorkspacePage.tsx
frontend/src/shared/components/ConnectionBanner/: ConnectionBanner.tsx
frontend/src/shared/components/Modal/: Modal.tsx
frontend/src/shared/components/QueryState/: QueryState.test.tsx  QueryState.tsx
frontend/src/shared/components/Toast/: Toaster.tsx  index.ts  toast-store.ts
frontend/src/shared/constants/: app-constants.ts  index.ts  labels.ts  query-keys.ts  routes.ts
frontend/src/shared/hooks/: useCurrentApi.ts  useEscapeToClose.ts  useFaviconBadge.ts  useOnClickOutside.ts
frontend/src/stores/: drafts.test.ts  drafts.ts  huddle.ts  instances.ts  notificationPrefs.ts  presence.ts  users.ts  workspace.ts  wsStatus.ts
frontend/src/test/: setup.ts
frontend/src/types/: tiptap-markdown.d.ts
