[workspace]
members = [
    "shared/common",
    "shared/events",
    "api",
    "realtime",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/petar-basic/chat-systems"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "limit", "timeout", "request-id"] }

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }

# S3 / MinIO
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-config = "1"

# Auth — aws_lc_rs provider (reuses the aws-lc-rs already built for rustls) keeps the
# pure-Rust `rsa` crate (RUSTSEC-2023-0071) out of the tree; we only use HS256.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }
argon2 = "0.5"

# Crypto (webhook signing + TURN REST credentials)
hmac = "0.13"
sha1 = "0.11"
sha2 = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
rand = "0.10"
mime_guess = "2"
base64 = "0.22"
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Concurrency
dashmap = "6"
futures-util = "0.3"

# Internal shared crates
shared-common = { path = "shared/common" }
shared-events = { path = "shared/events" }
