[package]
name = "chat-realtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chat-realtime"
path = "src/main.rs"

[dependencies]
shared-common = { path = "../shared/common" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dotenvy = "0.15"

[dev-dependencies]
# `ServiceExt::oneshot` for driving the realtime router in integration tests.
tower = { workspace = true, features = ["util"] }
